# cats-platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  PROGRESS.md  README.md  ROADMAP.md  docker-compose.yaml  index.html  package-lock.json  package.json  tsconfig.desktop.json  tsconfig.electron.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.context/: boss-cat-ui-draft.md  project-state.md
assets/: .gitkeep
config/: .gitkeep  provider-capability-bootstrap.yaml.example
desktop/native/linux-stt/: CMakeLists.txt  NOTICE
desktop/native/linux-stt/scripts/: fetch-model.sh
desktop/native/linux-stt/src/: main.cpp
docs/: AGENT-GUIDE.md  README.md  SCRIPT-STANDARDS.md  agent-control-surfaces.md  api.md  architecture.md  deployment.md  live-preview-operator-guide.md  mcp-config.md  platform-viewer-policy.md  product-integration-guide.md  release-notes.md  requirements.md  security-guidelines.md  services.md  setup-guide.md  terminology.md  testing.md  tool-calls.md
electron/: bootstrapPage.ts  config.ts  contracts.ts  desktopStartup.ts  electron-shim.d.ts  env.ts  hostState.ts  main.ts  packaging.ts  persistedSetupState.ts  platformPaths.ts  preload.cts  preload.ts  processSupervisor.ts  readiness.ts  setupAssets.ts  setupBridge.ts  tray.ts  trayLifecycle.ts  trayMenu.ts  update.ts  windowChrome.ts
mobile/: README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
scripts/: README.md  build-desktop-installer.mjs  build-server-artifacts.mjs  build-test-ui.mjs  bundle-server.mjs  check-mobile-boundary.mjs  check-mobile-build.mjs  clean-build.mjs  clean-dist.mjs  dev-server.mjs  dev-toggle-feature-flag.mts  package-desktop.mjs  patch-mobile-hermesc.mjs  preview-bootstrap.mjs
skills/: README.md
src/: .gitkeep  config.ts  index.ts  server.ts
tests/: .gitkeep  account-identity-menu.test.tsx  actor-list.test.js  actor-workload-projection.test.js  add-cat-panel-mcp-profile.test.tsx  adr-041-subscription-coexistence.test.js  advanced-draft-controls.test.tsx  app-host-route.test.tsx  app-package-routes.test.tsx  app-shell-presentation.test.tsx  app-shell-routing-effect.test.js  app-shutdown.test.js  app-startup-trace.test.js  app-startup.test.js  (+682 more)
(+2290 files in other folders)
